# hulaloop

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  codecov.yml
.github/workflows/: build.yml  c-cpp.yml  scorecard.yml
demos/: CMakeLists.txt  signal_handler.cc
include/hulaloop/: closer.h  loop.h  repeater.h  scoped_fd.h  signal.h  sys.h  unix_sig.h
tests/: CMakeLists.txt  fakes.h  test_closer.cc  test_loop.cc  test_repeater.cc  test_scoped_fd.cc  test_signal.cc
